Edited Spacing issue

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -15,6 +15,10 @@ body{
     background: rgba(0, 0, 0, 0.6);
 }
 
+.carousel-inner{
+    top: 3vh;
+}
+
 .carousel-item {
   height: 384px;
 }
